@@ -619,6 +619,7 @@ void OvmsVehicleRenaultTwizy::IncomingFrameCan1(CAN_frame_t* p_frame)
       break;
 
 
+#if 0
     case 0x69F:
       // --------------------------------------------------------------------------
       // *** VIN ***
@@ -637,6 +638,7 @@ void OvmsVehicleRenaultTwizy::IncomingFrameCan1(CAN_frame_t* p_frame)
         *StdMetrics.ms_v_vin = (string) twizy_vin;
       }
       break;
+#endif
     
     
     case 0x700:
